[project]
name = "nonebot-plugin-saaweather"
version = "0.1.0"
description = "nonebot-plugin-saaweather"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["nonebot_plugin_saaweather/plugins"]
builtin_plugins = ["echo"]
